13/12/2017:
	- Update to configure.ac to fix compilation with Kakadu 7.10


28/11/2017:
	- Modified bilinear interpolation code to avoid risk of unallocated buffer
	  reads at edges and to use replicated pixels.


26/11/2017:
	- Removed exception specifications from the IIPImage and Compressor class
	  declarations as well as from their derived classes. Dynamic exception
	  specifications are deprecated in C++11 onwards. See for rationale and details:
	  http://www.open-std.org/jtc1/sc22/wg21/docs/papers/2010/n3051.html


25/11/2017:
	- Added missing RED, GREEN and BLUE colormap implementations to Transforms.cc


24/11/2017:
	- Added input validation for SPECTRA, PFL and MINMAX commands to avoid
	  possible access to unmapped memory - thanks to John Heasman at DocuSign.


17/11/2017:
	- Added a check to KakaduImage.cc for zero-sized regions


04/10/2017:
	- Set an upper size limit to ICC profiles accepted for embedding


04/08/2017:
	- Increased JPEG buffer size to handle large markers such as XMP metadata.
	- XMP metadata size now reported in CVT.cc.


14/07/2017:
	- Added Compressor class from which JPEGCompressor is now derived.
	  Abstracting this will enable easier integration of PNG output.
	  Output format now specified in View class.


06/07/2017:
	- Enabled CORS for error responses.


05/07/2017:
	- Added "Access-Control-Allow-Headers" field if CORS has been set to
	  fix CORS Ajax problems with js libraries such as JQuery, Mootools.


02/07/2017:
	- Added OpenMP threading info to startup in Main.cc.


30/06/2017:
	- Added ICC profile embedding support in JPEGCompressor for both JTL
	  and CVT commands using an implementation based on IJG's iccjpeg.
	  TPTImage and KakaduImage now extract the profile into the metadata map.
	  Added also new EMBED_ICC environment variable to allow user to disable
	  embedding. Thanks to Dave Beaudet for initial implementation.
	- Refactored XMP metadata handling within JPEG.


23/06/2017: